--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bruce Wallet App</title>
+    <title>My Wallet App</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="text-warning text-center display-5 my-4">
-    Bruce Wallet App 💰
+      My Wallet App 💳
     </header>
 
     <main class="container" style="max-width: 800px">
@@ -129,6 +129,5 @@
     </main>
 
     <script src="app.js"></script>
-    <!-- <script src="app_objesiz.js"></script> -->
   </body>
 </html>
