--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Wallet App</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -100,7 +101,9 @@
           </tr> -->
         </tbody>
       </table>
-
+    
+      <canvas width="200px" height="200px" id="myChart"></canvas>
+     
       <table
         id="sonuc-tablosu"
         class="table table-bordered table-hover table-striped mt-4 text-center w-50 ms-auto"
@@ -120,6 +123,7 @@
           </tr>
         </tbody>
       </table>
+  
 
       <section class="text-center">
         <button id="temizle-btn" class="btn btn-secondary">
